SBVTestSuite/TestSuite/CompileTests/PCase/PCase05.stderr
PCase05.hs:13:14: error: [GHC-39584]
    " PCase05.hs:15:9-14: sCase/pCase: Not in scope: data constructor: Numb
    " In the quasi-quotation:
        [pCase|Expr e of
        Zero  -> undefined
        Numb _ -> undefined
      |]
   |
13 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

